test/errors/type/str/startswith2.yasl
mt.lookup('', .startswith)(1, .true)
